move2kube/myproject/myproject/extending-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    move2kube.konveyor.io/service.expose: "true"
  creationTimestamp: null
  labels:
    move2kube.konveyor.io/service: extending
  name: extending
spec:
  progressDeadlineSeconds: 600
  replicas: 2
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      move2kube.konveyor.io/service: extending
  strategy:
    rollingUpdate:
      maxSurge: 25%
      maxUnavailable: 25%
    type: RollingUpdate
  template:
    metadata:
      annotations:
        move2kube.konveyor.io/service.expose: "true"
      creationTimestamp: null
      labels:
        move2kube.konveyor.io/service: extending
      name: extending
    spec:
      containers:
      - image: quay.io/myproject/extending:latest
        imagePullPolicy: Always
        name: extending
        ports:
        - containerPort: 8080
          protocol: TCP
        resources: {}
        terminationMessagePath: /dev/termination-log
        terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      securityContext: {}
      terminationGracePeriodSeconds: 30
status: {}
